test/spec_vectors/block/fail/module_145.wat
(module (func $type-break-operand-void-vs-nums (result i32) (i32.add (block (br 0 (nop))))))